--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -13,16 +13,22 @@
   <section class="main">
     <input class="toggle-all" type="checkbox">
     <label for="toggle-all">Mark all as complete</label>
+
     <ul class="todo-list">
       <% @list.items.each do |item| %>
-      <li>
+      <li class="<%= "completed" if item.complete? %>">
+
         <div class="view">
-          <input class="toggle" type="checkbox">
+          <%= form_for([@list, item]) do |f| %>
+            <%= f.check_box :status, :class => "toggle", :checked => (true if item.complete?) %>
+          <% end %>
           <label><%= item.description %></label>
         </div>
+
       </li>
       <% end %>
     </ul>
+
   </section>
   <footer class="footer">
   </footer>
