--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -16,16 +16,7 @@
 
     <ul class="todo-list">
       <% @list.items.each do |item| %>
-      <li class="<%= "completed" if item.complete? %>">
-
-        <div class="view">
-          <%= form_for([@list, item]) do |f| %>
-            <%= f.check_box :status, :class => "toggle", :checked => (true if item.complete?) %>
-          <% end %>
-          <label><%= item.description %></label>
-        </div>
-
-      </li>
+      <%= render partial: "items/item_li", locals: {item: item} %>
       <% end %>
     </ul>
 
