--- a/app/views/items/_item_li.html.erb
+++ b/app/views/items/_item_li.html.erb
@@ -1,4 +1,4 @@
-<li class="<%= "completed" if item.complete? %>">
+<%= content_tag_for :li, item, class: li_class_for_item(item) do %>
 
   <div class="view">
     <%= form_for([@list, item]) do |f| %>
@@ -7,4 +7,4 @@
     <label><%= item.description %></label>
   </div>
 
-</li>
+<% end %>
