--- a/app/views/items/_item_li.html.erb
+++ b/app/views/items/_item_li.html.erb
@@ -1,9 +1,7 @@
 <%= list_for_item(item) do %>
 
   <div class="view">
-    <%= form_for([@list, item]) do |f| %>
-      <%= f.check_box :status, :class => "toggle", :checked => (true if item.complete?) %>
-    <% end %>
+    <%= form_for_item_status(item) %>
     <label><%= item.description %></label>
   </div>
 
